# Exporation-Robot

./: CMakeLists.txt  README.md  package.xml
launch/: explore.launch
maps/: house_slam.rviz.pgm  house_slam.rviz.yaml
nodes/: a_star.py  explore.py
rviz/: house_slam.rviz
